--- a/TravelClaimsApp/res/layout/activity_search.xml
+++ b/TravelClaimsApp/res/layout/activity_search.xml
@@ -10,6 +10,7 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:layout_toRightOf="@+id/Search_Text"
+        android:onClick="searchButton"
         android:text="@string/Search" />
 
     <EditText
@@ -18,7 +19,8 @@
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/Search_Button"
         android:layout_alignParentLeft="true"
-        android:ems="10" />
+        android:ems="10"
+        android:hint="@string/SearchHint" />
 
     <ListView
         android:id="@+id/Search_List"
