--- a/TravelClaimsApp/res/layout/expense_list_adaptor.xml
+++ b/TravelClaimsApp/res/layout/expense_list_adaptor.xml
@@ -5,24 +5,6 @@
     android:layout_height="match_parent" >
 
     <TextView
-        android:id="@+id/expenseAdaptor_currency"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:text="currency"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
-
-    <TextView
-        android:id="@+id/expenseAdaptor_amount"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:text="amount"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
-
-    <TextView
         android:id="@+id/expenseAdaptor_category"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -40,5 +22,32 @@
         android:layout_below="@+id/expenseAdaptor_currency"
         android:text="date"
         android:textAppearance="?android:attr/textAppearanceSmall" />
+
+    <TextView
+        android:id="@+id/expenseAdaptor_currency"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:text="currency"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <TextView
+        android:id="@+id/expenseAdaptor_Name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/expenseAdaptor_date"
+        android:layout_alignParentLeft="true"
+        android:text="ExpenseName"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <TextView
+        android:id="@+id/expenseAdaptor_amount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/expenseAdaptor_category"
+        android:layout_toLeftOf="@+id/expenseAdaptor_currency"
+        android:text="amount"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
 
 </RelativeLayout>
