--- a/TravelClaimsApp/res/layout/expense_list_adaptor.xml
+++ b/TravelClaimsApp/res/layout/expense_list_adaptor.xml
@@ -5,16 +5,6 @@
     android:layout_height="match_parent" >
 
     <TextView
-        android:id="@+id/expenseAdaptor_category"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/expenseAdaptor_date"
-        android:layout_alignBottom="@+id/expenseAdaptor_date"
-        android:layout_alignParentRight="true"
-        android:text="category"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
-
-    <TextView
         android:id="@+id/expenseAdaptor_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -49,5 +39,23 @@
         android:layout_toLeftOf="@+id/expenseAdaptor_currency"
         android:text="amount"
         android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <TextView
+        android:id="@+id/expenseAdaptor_category"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/expenseAdaptor_date"
+        android:layout_alignBottom="@+id/expenseAdaptor_date"
+        android:layout_centerHorizontal="true"
+        android:text="category"
+        android:textAppearance="?android:attr/textAppearanceSmall" />
+
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignTop="@+id/expenseAdaptor_category"
+        android:src="@drawable/ic_action_toggle_star_outline" />
 
 </RelativeLayout>
