--- a/TravelClaimsApp/res/layout/expense_list_adaptor.xml
+++ b/TravelClaimsApp/res/layout/expense_list_adaptor.xml
@@ -51,11 +51,12 @@
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
     <ImageView
-        android:id="@+id/imageView1"
+        android:id="@+id/expenseAdaptor_flag"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignTop="@+id/expenseAdaptor_category"
+        android:onClick="ChangeFlag"
         android:src="@drawable/ic_action_toggle_star_outline" />
 
 </RelativeLayout>
