--- a/TravelClaimsApp/res/layout/LoginScreen.xml
+++ b/TravelClaimsApp/res/layout/LoginScreen.xml
@@ -1,7 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@drawable/Background"
+    android:background="@drawable/background"
     android:orientation="vertical"
     android:paddingBottom="100dp"
     android:paddingLeft="30dp"
@@ -28,7 +28,7 @@
     </EditText>
 
     <EditText
-        android:id="@id/Password"
+        android:id="@id/PasswordText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -39,6 +39,35 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
+
+        <Button
+            android:id="@+id/RegisterButton"
+            android:layout_width="120dp"
+            android:layout_height="30dp"
+            android:background="@drawable/buttonshape"
+            android:paddingRight="5dp"
+            android:shadowColor="#A8A8A8"
+            android:shadowDx="0"
+            android:shadowDy="0"
+            android:shadowRadius="5"
+            android:text="@string/Register"
+            android:textColor="#FFFFFF"
+            android:textSize="20sp" />
+    
+        <Button
+            android:id="@+id/LoginButton"
+            android:layout_width="120dp"
+            android:layout_height="30dp"
+            android:background="@drawable/buttonshape"
+            android:paddingRight="5dp"
+            android:shadowColor="#A8A8A8"
+            android:shadowDx="0"
+            android:shadowDy="0"
+            android:shadowRadius="5"
+            android:text="@string/Login"
+            android:textColor="#FFFFFF"
+            android:textSize="20sp" />
+
     </LinearLayout>
 
 </LinearLayout>
