--- a/TravelClaimsApp/res/layout/dest_list_adaptor.xml
+++ b/TravelClaimsApp/res/layout/dest_list_adaptor.xml
@@ -21,4 +21,13 @@
         android:text="Medium Text"
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
+    <ImageView
+        android:id="@+id/destAdaptor_map_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginRight="19dp"
+        android:src="@drawable/ic_action_map" />
+
 </RelativeLayout>
