--- a/TravelClaimsApp/res/layout/login_screen.xml
+++ b/TravelClaimsApp/res/layout/login_screen.xml
@@ -20,7 +20,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="@string/User" >
+        android:hint="@string/User"
+        android:textColor="#ffffff" >
 
         <requestFocus />
     </EditText>
@@ -31,7 +32,8 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="@string/Password"
-        android:inputType="textPassword" />
+        android:inputType="textPassword"
+        android:textColor="#ffffff" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -43,6 +45,7 @@
             android:layout_height="30dp"
             android:layout_weight="1"
             android:background="@drawable/buttonshape"
+            android:onClick="RegisterButton"
             android:shadowColor="#A8A8A8"
             android:shadowDx="0"
             android:shadowDy="0"
@@ -57,6 +60,7 @@
             android:layout_height="30dp"
             android:layout_weight="1"
             android:background="@drawable/buttonshape"
+            android:onClick="OnLoginClick"
             android:shadowColor="#A8A8A8"
             android:shadowDx="0"
             android:shadowDy="0"
