show initial picture

--- a/TravelClaimsApp/res/layout/activity_edit_expense.xml
+++ b/TravelClaimsApp/res/layout/activity_edit_expense.xml
@@ -56,16 +56,10 @@
         android:id="@+id/CurrencySpinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignRight="@+id/Edit_Expense_Date"
         android:layout_below="@+id/Edit_Expense_Cost"
+        android:layout_toRightOf="@+id/Edit_Expense_Cost"
         android:entries="@array/CurrencyArray" />
-
-    <Spinner
-        android:id="@+id/CategorySpinner"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/CurrencySpinner"
-        android:layout_below="@+id/CurrencySpinner"
-        android:entries="@array/CategoryArray" />
 
     <EditText
         android:id="@+id/Edit_Expense_Description"
@@ -77,5 +71,24 @@
         android:ems="10"
         android:hint="@string/Description"
         android:inputType="textMultiLine" />
+
+    <Spinner
+        android:id="@+id/CategorySpinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/Edit_Expense_Cost"
+        android:layout_alignRight="@+id/Edit_Expense_Cost"
+        android:layout_alignTop="@+id/CurrencySpinner"
+        android:entries="@array/CategoryArray" />
+
+    <ImageView
+        android:id="@+id/ReceiptImg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/Edit_Expense_Ok"
+        android:layout_alignLeft="@+id/Edit_Expense_Ok"
+        android:layout_alignRight="@+id/Edit_Expense_Ok"
+        android:layout_below="@+id/Edit_Expense_Description"
+        android:src="@drawable/ic_action_new_picture" />
 
 </RelativeLayout>
