--- a/TravelClaimsApp/res/layout/dest_list_adaptor.xml
+++ b/TravelClaimsApp/res/layout/dest_list_adaptor.xml
@@ -28,6 +28,6 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:layout_marginRight="19dp"
-        android:src="@drawable/ic_action_map" />
+        android:src="@drawable/ic_action_map_icon" />
 
 </RelativeLayout>
