--- a/TravelClaimsApp/res/layout/claim_list_adaptor.xml
+++ b/TravelClaimsApp/res/layout/claim_list_adaptor.xml
@@ -36,11 +36,11 @@
         android:id="@+id/claimAdaptor_startDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Small Text"
-        android:textColor="#ffffff"
         android:drawableBottom="@drawable/horizontal_line"
         android:paddingBottom="1dp"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
+        android:text="Small Text"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textColor="#ffffff" />
 
    	<LinearLayout
    	    android:id="@+id/linearLayout_destinations"
