--- a/TravelClaimsApp/res/layout/activity_edit_expense.xml
+++ b/TravelClaimsApp/res/layout/activity_edit_expense.xml
@@ -80,4 +80,14 @@
         android:layout_toLeftOf="@+id/CurrencySpinner"
         android:entries="@array/CategoryArray" />
 
+    <ImageView
+        android:id="@+id/Edit_Expense_Image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/Edit_Expense_Ok"
+        android:layout_alignLeft="@+id/Edit_Expense_Description"
+        android:layout_alignRight="@+id/Edit_Expense_Ok"
+        android:layout_below="@+id/Edit_Expense_Description"
+        android:src="@drawable/ic_action_new_picture" />
+
 </RelativeLayout>
