--- a/TravelClaimsApp/res/layout/edit_expense.xml
+++ b/TravelClaimsApp/res/layout/edit_expense.xml
@@ -57,36 +57,36 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:entries="@array/CategoryArray" />
+
+        <EditText
+            android:id="@+id/Edit_Expense_Description2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="@string/Description"
+            android:inputType="textMultiLine"
+            android:textColor="#ffffff" />
+
+        <ImageView
+            android:id="@+id/Edit_Expense_Image2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_action_new_picture" />
+
+        <Button
+            android:id="@+id/dit_Expense_Ok2"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:background="@drawable/buttonshape"
+            android:onClick="RegisterButton"
+            android:shadowColor="#A8A8A8"
+            android:shadowDx="0"
+            android:shadowDy="0"
+            android:shadowRadius="5"
+            android:text="@string/Ok"
+            android:textColor="#FFFFFF"
+            android:textSize="20sp" />
+
     </LinearLayout>
-
-    <EditText
-        android:id="@+id/Edit_Expense_Description2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="@string/Description"
-        android:inputType="textMultiLine"
-        android:textColor="#ffffff" />
-
-    <ImageView
-        android:id="@+id/Edit_Expense_Image2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:src="@drawable/ic_action_new_picture" />
-
-    <Button
-        android:id="@+id/dit_Expense_Ok2"
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:background="@drawable/buttonshape"
-        android:onClick="RegisterButton"
-        android:shadowColor="#A8A8A8"
-        android:shadowDx="0"
-        android:shadowDy="0"
-        android:shadowRadius="5"
-        android:text="@string/Ok"
-        android:textColor="#FFFFFF"
-        android:textSize="20sp" />
 
 </LinearLayout>
