--- a/TravelClaimsApp/res/layout/new_user.xml
+++ b/TravelClaimsApp/res/layout/new_user.xml
@@ -54,6 +54,7 @@
         android:layout_width="fill_parent"
         android:layout_height="30dp"
         android:background="@drawable/buttonshape"
+        android:onClick="OnClickCreateUser"
         android:shadowColor="#A8A8A8"
         android:shadowDx="0"
         android:shadowDy="0"
