--- a/TravelClaimsApp/res/layout/expense_list.xml
+++ b/TravelClaimsApp/res/layout/expense_list.xml
@@ -27,7 +27,7 @@
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:background="@drawable/buttonshape"
-        android:onClick="RegisterButton"
+        android:onClick="AddExpenseButton"
         android:shadowColor="#A8A8A8"
         android:shadowDx="0"
         android:shadowDy="0"
