--- a/TravelClaimsApp/res/layout/new_user.xml
+++ b/TravelClaimsApp/res/layout/new_user.xml
@@ -21,7 +21,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="@string/User" >
+        android:hint="@string/User"
+        android:textColor="#ffffff" >
 
         <requestFocus />
     </EditText>
@@ -32,7 +33,8 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="@string/Password"
-        android:inputType="textPassword" />
+        android:inputType="textPassword"
+        android:textColor="#ffffff" />
 
     <EditText
         android:id="@+id/Create_Password_Again"
@@ -40,7 +42,8 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="@string/PasswordAgain"
-        android:inputType="textPassword" />
+        android:inputType="textPassword"
+        android:textColor="#ffffff" />
 
     <CheckBox
         android:id="@+id/Approver_Check_Box"
@@ -48,20 +51,6 @@
         android:layout_height="wrap_content"
         android:text="@string/Approver"
         android:textColor="#ffffff" />
-    
-    <Button
-        android:id="@+id/Create_User_Button"
-        android:layout_width="fill_parent"
-        android:layout_height="30dp"
-        android:background="@drawable/buttonshape"
-        android:onClick="OnClickCreateUser"
-        android:shadowColor="#A8A8A8"
-        android:shadowDx="0"
-        android:shadowDy="0"
-        android:shadowRadius="5"
-        android:text="@string/CreateUser"
-        android:textColor="#FFFFFF"
-        android:textSize="20sp" />
 
     <TextView
         android:id="@+id/HomeLocationTitle"
@@ -76,5 +65,19 @@
         android:layout_height="wrap_content"
         android:onClick="selectHomeLocation"
         android:src="@drawable/ic_action_map_icon" />
+
+    <Button
+        android:id="@+id/Create_User_Button"
+        android:layout_width="fill_parent"
+        android:layout_height="30dp"
+        android:background="@drawable/buttonshape"
+        android:onClick="OnClickCreateUser"
+        android:shadowColor="#A8A8A8"
+        android:shadowDx="0"
+        android:shadowDy="0"
+        android:shadowRadius="5"
+        android:text="@string/CreateUser"
+        android:textColor="#FFFFFF"
+        android:textSize="20sp" />
 
 </LinearLayout>
