--- a/TravelClaimsApp/res/layout/claim_list_adaptor.xml
+++ b/TravelClaimsApp/res/layout/claim_list_adaptor.xml
@@ -22,16 +22,36 @@
         android:background="#FFFFFF"
         android:text="Medium Text"
         android:textAppearance="?android:attr/textAppearanceMedium" />
-
-    <TextView
-        android:id="@+id/claimAdaptor_status"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+	
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="23dp"
         android:layout_below="@+id/claimAdaptor_display_name"
-        android:text="Small Text"
-        android:textColor="#ffffff"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
+        android:orientation="horizontal" >
 
+	    <TextView
+	        android:id="@+id/claimAdaptor_status"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:text="Small Text"
+	        android:textColor="#000000"
+	        android:layout_gravity="left"
+	        android:layout_weight="100"
+	        android:textAppearance="?android:attr/textAppearanceSmall" />
+	    
+	    <TextView
+	        android:id="@+id/claim_color_code"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_gravity="right"
+	        android:background="#0746F2"
+	        android:textColor="#0746F2"
+	        android:text="S"
+	        android:layout_weight="1"
+	        android:textAppearance="?android:attr/textAppearanceSmall" />
+
+    </LinearLayout>
+    
     <TextView
         android:id="@+id/claimAdaptor_startDate"
         android:layout_width="wrap_content"
