--- a/TravelClaimsApp/res/layout/activity_approver.xml
+++ b/TravelClaimsApp/res/layout/activity_approver.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -9,8 +10,20 @@
     tools:context=".ApproverActivity" >
 
     <TextView
+        android:id="@+id/approver_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:text="Submmited Claims" />
+
+    <ListView
+        android:id="@+id/approver_lsitview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/approver_textview" >
+
+    </ListView>
 
 </RelativeLayout>
