--- a/TravelClaimsApp/res/layout/activity_edit_expense.xml
+++ b/TravelClaimsApp/res/layout/activity_edit_expense.xml
@@ -35,8 +35,8 @@
         android:id="@+id/Edit_Expense_Ok"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/Edit_Expense_Image"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:onClick="CreateExpense"
         android:text="@string/Ok" />
@@ -86,7 +86,7 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/Edit_Expense_Ok"
         android:layout_alignLeft="@+id/Edit_Expense_Description"
-        android:layout_alignRight="@+id/Edit_Expense_Ok"
+        android:layout_alignRight="@+id/CurrencySpinner"
         android:layout_below="@+id/Edit_Expense_Description"
         android:src="@drawable/ic_action_new_picture" />
 
