--- a/TravelClaimsApp/res/layout/claim_list_adaptor.xml
+++ b/TravelClaimsApp/res/layout/claim_list_adaptor.xml
@@ -25,7 +25,7 @@
 	
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="23dp"
+        android:layout_height="match_parent"
         android:layout_below="@+id/claimAdaptor_display_name"
         android:orientation="horizontal" >
 
@@ -52,16 +52,24 @@
 
     </LinearLayout>
     
-    <TextView
-        android:id="@+id/claimAdaptor_startDate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:drawableBottom="@drawable/horizontal_line"
-        android:paddingBottom="1dp"
-        android:text="Small Text"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textColor="#ffffff" />
+     <LinearLayout
+        android:id="@+id/LinearLayoutClaimList_date"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/claimAdaptor_display_name"
+	    android:orientation="horizontal" >
+	    <TextView
+	        android:id="@+id/claimAdaptor_startDate"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:drawableBottom="@drawable/horizontal_line"
+	        android:paddingBottom="1dp"
+	        android:text="Small Text"
+	        android:textAppearance="?android:attr/textAppearanceSmall"
+	        android:textColor="#ffffff" />
 
+    </LinearLayout>
+    
    	<LinearLayout
    	    android:id="@+id/linearLayout_destinations"
    	    android:layout_width="wrap_content"
