--- a/TravelClaimsApp/res/menu/edit_expense.xml
+++ b/TravelClaimsApp/res/menu/edit_expense.xml
@@ -7,5 +7,6 @@
         android:title="@string/action_settings"/>
     <item android:id="@+id/SearchMenuButton" android:title="Search" android:onClick="SearchOption"></item>
     <item android:id="@+id/SignOut" android:title="Sign Out" android:onClick="SignOut"></item>
+    <item android:id="@+id/return_to_claimList" android:title="Return to claim list" android:onClick="backToClaimList"></item>
 
 </menu>
