--- a/TravelClaimsApp/res/menu/approver_claim_list.xml
+++ b/TravelClaimsApp/res/menu/approver_claim_list.xml
@@ -5,6 +5,6 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/action_settings"/>
-    <item android:id="@+id/SearchMenuButton" android:onClick="SearchOption" android:title="Search"></item>
+    <item android:id="@+id/SearchMenuButton" android:title="Search"></item>
 
 </menu>
