--- a/TravelClaimsApp/res/layout/expense_list_adaptor.xml
+++ b/TravelClaimsApp/res/layout/expense_list_adaptor.xml
@@ -44,15 +44,6 @@
         android:onClick="ChangeFlag"
         android:src="@drawable/ic_toggle_star_outline" />
 
-    <ImageView
-        android:id="@+id/expenseAdaptor_map"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/expenseAdaptor_flag"
-        android:layout_below="@+id/expenseAdaptor_currency"
-        android:layout_toLeftOf="@+id/expenseAdaptor_flag"
-        android:src="@drawable/ic_action_map_icon" />
-
     <TextView
         android:id="@+id/expenseAdaptor_currency"
         android:layout_width="wrap_content"
@@ -72,5 +63,34 @@
         android:text="amount"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="#FFFFFF" />
+
+    <ImageView
+        android:id="@+id/expenseAdaptor_attachment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/expenseAdaptor_flag"
+        android:layout_below="@+id/expenseAdaptor_currency"
+        android:layout_toLeftOf="@+id/expenseAdaptor_flag"
+        android:src="@drawable/ic_action_attach" />
+
+    <ImageView
+        android:id="@+id/expenseAdaptor_map"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/expenseAdaptor_attachment"
+        android:layout_alignTop="@+id/expenseAdaptor_attachment"
+        android:layout_toLeftOf="@+id/expenseAdaptor_attachment"
+        android:src="@drawable/ic_action_map_white" />
+
+    <LinearLayout
+        android:id="@+id/expenseAdaptor_description"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/expenseAdaptor_map"
+        android:orientation="vertical" >
+
+    </LinearLayout>
 
 </RelativeLayout>
