--- a/TravelClaimsApp/res/layout/claim_list_adaptor.xml
+++ b/TravelClaimsApp/res/layout/claim_list_adaptor.xml
@@ -23,6 +23,8 @@
         android:text="Medium Text"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 	
+	
+    
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -33,20 +35,20 @@
 	        android:id="@+id/claimAdaptor_status"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
-	        android:text="Small Text"
-	        android:textColor="#000000"
-	        android:layout_gravity="left"
 	        android:layout_weight="100"
-	        android:textAppearance="?android:attr/textAppearanceSmall" />
+	        android:layout_gravity="left"
+	        android:text="Small Text"
+	        android:textAppearance="?android:attr/textAppearanceSmall"
+	        android:textColor="#000000" />
 	    
 	    <TextView
 	        android:id="@+id/claim_color_code"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:layout_gravity="right"
-	        android:layout_weight="1"
 	        android:background="#0746F2"
 	        android:text="S"
+	         android:layout_weight="1"
 	        android:textAppearance="?android:attr/textAppearanceSmall"
 	        android:textColor="#0746F2" />
 
@@ -97,6 +99,18 @@
    	    android:orientation="vertical" >
    	</LinearLayout>
    
-
+   	
+	 <LinearLayout
+   	    android:id="@+id/LinearLayout_userName"
+   	    android:layout_width="wrap_content"
+   	    android:layout_height="wrap_content"
+   	    android:divider="@drawable/horizontal_line"
+   	    android:showDividers="end"
+   	    android:orientation="vertical" >
+   	</LinearLayout>
+   	
+	 
+   
+   
 
 </LinearLayout>
