--- a/TravelClaimsApp/res/menu/expense_list_view.xml
+++ b/TravelClaimsApp/res/menu/expense_list_view.xml
@@ -1,4 +1,4 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
-    <item android:id="@+id/SearchMenuButton" android:title="Search" android:onClick="SearchOption"></item>
+    <item android:id="@+id/SearchMenuButton" android:title="@string/Search" android:onClick="SearchOption"></item>
 
 </menu>
