--- a/TravelClaimsApp/res/menu/add_claim.xml
+++ b/TravelClaimsApp/res/menu/add_claim.xml
@@ -1,6 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
-    <item android:id="@+id/SearchMenuButton" android:title="Search" android:onClick="SearchOption"></item>
-    <item android:id="@+id/SignOut" android:title="Sign Out" android:onClick="SignOut"></item>
-    <item android:id="@+id/Approver" android:onClick="MenuApprover" android:title="Approve Claims"></item>
+    <item android:id="@+id/SearchMenuButton" android:title="@string/Search" android:onClick="SearchOption"></item>
+    <item android:id="@+id/SignOut" android:title="@string/Logout" android:onClick="SignOut"></item>
+    <item android:id="@+id/Approver" android:onClick="MenuApprover" android:title="@string/ApproveClaims"></item>
 
 </menu>
